--- a/simulator.html
+++ b/simulator.html
@@ -57,6 +57,8 @@
 
     <div id="app"></div>
 
+    <div id="landArea"></div>
+
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <!-- Babel Script -->
