update text and language for consistency, add favicon to HTML files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASTA KOSALA KOSALI</title>
+    <title>Asta Kosala Kosali</title>
+    <link rel="icon" type="image/png" href="/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -32,38 +33,38 @@
         </div>
         <nav class="flex gap-4">
           <a href="#" class="text-primary">Home</a>
-          <a href="#" class="text-primary">Tentang</a>
+          <a href="#" class="text-primary">About</a>
           <a href="#" class="text-primary">FAQ</a>
-          <a href="#" class="px-4 py-2 bg-secondary text-white rounded">Masuk</a>
-          <a href="#" class="px-4 py-2 bg-primary text-white rounded">Daftar</a>
+          <a href="#" class="px-4 py-2 bg-secondary text-white rounded">Login</a>
+          <a href="#" class="px-4 py-2 bg-primary text-white rounded">Register</a>
         </nav>
       </header>
 
       <main class="px-8 py-4">
         <section class="mb-8">
-          <h2 class="text-3xl font-bold text-primary mb-4">Simulator Desain Rumah</h2>
-          <p class="text-gray-600 mb-4">Gunakan simulator kami untuk mendesain rumah tradisional Bali Anda dengan mudah dan cepat.</p>
+          <h2 class="text-3xl font-bold text-primary mb-4">Bali Building Simulator</h2>
+          <p class="text-gray-600 mb-4">Use our simulator to design your traditional Balinese house easily and quickly!</p>
         </section>
         
         <section class="px-6 py-8 rounded-lg shadow-md" style="background-color: #F2EDE5;">
-          <h2 class="text-2xl font-bold text-primary mb-4">Tentang Simulator</h2>
-          <p class="text-gray-600">Simulator ini dirancang untuk membantu Anda membuat desain rumah tradisional Bali yang sesuai dengan filosofi ASTA KOSALA KOSALI.</p>
+          <h2 class="text-2xl font-bold text-primary mb-4">About Bali Building Simulator</h2>
+          <p class="text-gray-600">This simulator is designed to help you create a traditional Balinese house design that is in accordance with the Asta Kosala Kosali philosophy.</p>
         </section>
 
         <section class="mt-8">
-          <h2 class="text-2xl font-bold text-primary mb-4">Pertanyaan yang Sering Diajukan</h2>
+          <h2 class="text-2xl font-bold text-primary mb-4">Frequently Asked Questions</h2>
           <div class="space-y-4">
             <details class="p-4 rounded" style="background-color: #F2EDE5;">
-              <summary class="cursor-pointer font-bold">Apa itu Simulator Desain Rumah?</summary>
-              <p class="mt-2 text-gray-600">Simulator Desain Rumah adalah alat yang dirancang untuk membantu Anda menciptakan desain rumah tradisional Bali.</p>
+              <summary class="cursor-pointer font-bold">What is Bali Building Simulator?</summary>
+              <p class="mt-2 text-gray-600">Bali Building Simulator is a tool designed to help you create traditional Balinese house designs.</p>
             </details>
             <details class="p-4 rounded" style="background-color: #F2EDE5;">
-              <summary class="cursor-pointer font-bold">Bagaimana cara menyimpan desain saya?</summary>
-              <p class="mt-2 text-gray-600">Desain Anda dapat disimpan melalui tombol "Simpan Desain" yang tersedia setelah Anda selesai mendesain.</p>
+              <summary class="cursor-pointer font-bold">What features are offered on the Bali Building Simulator website?</summary>
+              <p class="mt-2 text-gray-600">The Bali Building Simulator website provides two main features. First, the Location of Yard Door feature, which provides recommendations for the location of yard doors along with their philosophy based on the Asta Kosala Kosali principle. Second, the Building Layout feature, which provides recommendations for the layout of Balinese buildings and the distance between buildings in a yard according to the Asta Kosala Kosali principle.</p>
             </details>
             <details class="p-4 rounded" style="background-color: #F2EDE5;">
-              <summary class="cursor-pointer font-bold">Apakah desain dapat diunduh?</summary>
-              <p class="mt-2 text-gray-600">Ya, Anda dapat mengunduh desain Anda dalam format PDF atau gambar.</p>
+              <summary class="cursor-pointer font-bold">Are the designs downloadable?</summary>
+              <p class="mt-2 text-gray-600">Yes, you can save your design in PNG format.</p>
             </details>
           </div>
         </section>
@@ -71,7 +72,7 @@
 
       <footer class="px-8 py-4 bg-gray-100 flex justify-between items-center">
         <p class="text-gray-600">&copy; 2024 ASTA KOSALA KOSALI</p>
-        <a href="simulator.html" class="px-4 py-2 bg-primary text-white rounded">Coba Sekarang!</a>
+        <a href="simulator.html" class="px-4 py-2 bg-primary text-white rounded">Try Now!</a>
       </footer>
     </div>
   </body>
