--- a/simulator.html
+++ b/simulator.html
@@ -4,11 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asta Kosala Kosali</title>
+    <link rel="icon" type="image/png" href="/logo.png">
     <style>
       .button-container {
         display: flex;
         justify-content: center;
-        gap: 10px; /* Jarak antara tombol */
+        gap: 10px; 
         margin-top: 20px; 
         width: 100%;
       }
@@ -45,12 +46,12 @@
         </div>
         <ul class="flex gap-6 text-primary">
           <li><a href="#" class="hover:underline">Home</a></li>
-          <li><a href="#" class="hover:underline">Tentang</a></li>
+          <li><a href="#" class="hover:underline">About</a></li>
           <li><a href="#" class="hover:underline">FAQ</a></li>
         </ul>
         <div class="flex gap-4">
-          <button class="bg-secondary text-white py-2 px-4 rounded">Masuk</button>
-          <button class="bg-primary text-white py-2 px-4 rounded">Daftar</button>
+          <button class="bg-secondary text-white py-2 px-4 rounded">Login</button>
+          <button class="bg-primary text-white py-2 px-4 rounded">Register</button>
         </div>
       </div>
     </nav>
